--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,7 +29,7 @@ body {
     margin: 0;
 }
 
-.hero-unit {
+.hero-container {
   @include span-columns(12 of 12);
   height: 90vh;
   background: url("http://photos-f.ak.instagram.com/hphotos-ak-xaf1/t51.2885-15/10958148_635645619869653_1601705527_n.jpg") no-repeat center center fixed; 
